Added a page ref back to the intro chapter in the scripting section of the dispersion chapter.
This is to help the user work out how to run a relax script.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -806,7 +806,9 @@ The references for this model are:
 \newpage
 \section{Analysing dispersion in the prompt/script UI mode}
 
-Before reading this section, please read Chapter~\ref{ch: data model} covering the relax data model first.  It will explain many of the concepts used within the following example script.
+Before reading this section, please read Chapter~\ref{ch: data model} covering the relax data model first.
+It will explain many of the concepts used within the following example script.
+For detailed information on how to run a relax script, please see section~\ref{sect: scripting} on page~\pageref{sect: scripting}.
 
 
 % The sample script.
