Fix for the sqrt() function in the dispersion parameter table.

--- a/docs/latex/dispersion_params.tex
+++ b/docs/latex/dispersion_params.tex
@@ -30,7 +30,7 @@ $\omegaA$          & -                              & The Larmor frequency of th
 $\omegaB$          & -                              & The Larmor frequency of the spin in state B                                   & rad.s$^{-1}$ \\
 $\aveomega$        & $\pA\omegaA + \pB\omegaB$      & The population averaged Larmor frequency of the spin                          & rad.s$^{-1}$ \\
 $\omegaone$        & -                              & Spin-lock field strength, i.e. the amplitude of the rf field                  & rad.s$^{-1}$ \\
-$\omegae$          & $\sqrt(\aveoffset^2 + \omegaone^2)$  & Effective field in the rotating frame                                   & rad.s$^{-1}$ \\
+$\omegae$          & $\sqrt{\aveoffset^2 + \omegaone^2}$  & Effective field in the rotating frame                                   & rad.s$^{-1}$ \\
 $\omegarf$         & -                              & Spin-lock offset, i.e. the frequency of the rf field                          & rad.s$^{-1}$ \\
 $\theta$           & $\arctan \left( \frac{\omegaone}{\aveoffset} \right)$  & Rotating frame tilt angle                             & rad \\
 $\kAB$             & $\pB\kex$                      & The forward exchange rate from state A to state B                             & rad.s$^{-1}$ \\
