--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -791,12 +791,16 @@ The references for this model are:
 
 \section{The clustered relaxation dispersion analysis}
 
+\begin{figure*}[h]
+\includegraphics[width=3cm, bb=14 14 399 399]{graphics/misc/cluster_600x600}
+\end{figure*}
+
 Often in a relaxation dispersion analysis you will wish to fit a number of spin systems together using global parameters such as $\kex$, $\pA$, etc.
 This can be achieved through the concept of clustering.
 A cluster is defined by an ID string can can contain any number of spins.
 Multiple clusters in one analysis can be defined.
 Any spins not included in a cluster will be treated as a free spin whereby all parameters of the dispersion model are local to that spin.
-Spin clusters can be defined using the \uf{relax\_disp.cluster} user function.
+Spin clusters can be defined using the \uf{relax\_disp.cluster} user function or via the spin cluster GUI element.
 
 
 
