Added a page reference to the multi-processor section in the script section of the dispersion chapter.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -812,6 +812,7 @@ Spin clusters can be defined using the \uf{relax\_disp.cluster} user function or
 Before reading this section, please read Chapter~\ref{ch: data model} covering the relax data model first.
 It will explain many of the concepts used within the following example script.
 For detailed information on how to run a relax script, please see section~\ref{sect: scripting} on page~\pageref{sect: scripting}.
+The dispersion analysis is parallelised on the level of the spin cluster and Monte Carlo simulations so, if you have access to an MPI cluster or multi-core system with OpenMPI installed, please see section~\ref{sect: multi-processor} on page~\pageref{sect: multi-processor} for how to run the calculations much quicker.
 
 
 % The sample script.
