Better organisation of the models by data type in the dispersion software comparison table in the manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -40,7 +40,7 @@ $\Rtwoeff/\Ronerhoprime$    & \no  & \no  & \yes & \yes & \yes & \yes & \yes \\
 No Rex                      & \no  & \no  & \yes & \no  & \no  & \yes & \yes \\
 
 \vspace{-5pt} \\
-CPMG-type \\
+Single quantum (SQ) CPMG-type \\
 \cmidrule(lr){1-1}
 LM63                        & \yes & \no  & \yes & \no  & \yes & \yes & \yes \\
 LM63 3-site                 & \yes & \no  & \yes & \no  & \no  & \no  & \yes \\
@@ -48,10 +48,17 @@ CR72                        & \yes & \no  & \yes & \no  & \yes & \yes & \yes \\
 IT99                        & \yes & \no  & \no  & \no  & \no  & \yes & \yes \\
 TSMFK01                     & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 NS 2-site                   & \no  & \yes & \no  & \no  & \yes & \no  & \yes \\
+
+\vspace{-5pt} \\
+Multiple quantum (MQ) CPMG-type \\
+\cmidrule(lr){1-1}
+MQ CR72                     & \no  & \no  & \no  & \yes & \no  & \yes & \yes \\
+\vspace{-5pt} \\
+MMQ (SQ, ZQ, DQ, \& MQ) CPMG-type \\
+\cmidrule(lr){1-1}
+NS 2-site                   & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 NS 3-site (linear)          & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 NS 3-site (branched)        & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
-MQ CR72                     & \no  & \no  & \no  & \yes & \no  & \yes & \yes \\
-KKKTK04                     & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 
 \vspace{-5pt} \\
 $\Ronerho$-type \\
