Added Dmitry Korzhnev's cpmg_fit software to the dispersion chapter of the manual.
This is in the last section of that chapter and in the software comparison table.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1330,6 +1330,7 @@ The following is a list of the officially released software which you can use in
 
 \begin{description}
 \item[CPMGFit] Art Palmer's original dispersion analysis software at \url{http://www.palmer.hs.columbia.edu/software/cpmgfit.html}.
+\item[cpmg\_fit] Dmitry Korzhnev's dispersion software available upon request.
 \item[CATIA] Flemming Hansen's dispersion software at \url{http://www.biochem.ucl.ac.uk/hansen/catia/}.  The reference is \citet{Hansen08}.
 \item[NESSY] Michael Bieri's dispersion software at \url{http://home.gna.org/nessy/}.  The reference is \citet{BieriGooley11}.
 \item[GUARDD] Ian Kleckner's dispersion software at \url{http://code.google.com/p/guardd/}.  The reference is \citet{KlecknerFoster12}.
