--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1336,6 +1336,7 @@ The following is a list of the officially released software which you can use in
 \item[GUARDD] Ian Kleckner's dispersion software at \url{http://code.google.com/p/guardd/}.  The reference is \citet{KlecknerFoster12}.
 \item[ShereKhan] See the web server at \url{http://sherekhan.bionmr.org/}.  The reference is \citet{Mazur13}.
 \item[GLOVE] Peter Wright's dispersion software at \url{http://www.scripps.edu/wright/}.  The reference is \citet{Sugase13}.
+\item[chemex] Guillaume Bouvignies' dispersion software which can be found at \url{http://code.google.com/p/chemex/}.
 \end{description}
 
 There is currently support in relax for generating the input files for CPMGFit, CATIA, NESSY, and ShereKhan and for running CPMGFit and CATIA from within relax.
@@ -1345,5 +1346,4 @@ Note that this table is likely to be incomplete.
 Please see the websites of the respective software for an up to date list of features.
 If you do find deficiencies in this table, it would be appreciated if you could communicate these on the relax users mailing list at ``relax-users at gna.org''\index{mailing list!relax-users}.
 
-\clearpage
 \input{dispersion_software}
