--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -5,7 +5,7 @@
 \setlength\LTcapwidth{\textwidth}
 \setlength\LTleft{0pt}
 \setlength\LTright{0pt}
-\begin{longtable}{l@{\extracolsep{\fill}}cccccccc}
+\begin{longtable}{l@{\extracolsep{\fill}}ccccccccc}
 
 % Caption.
 \caption[Dispersion software comparison.]{Comparison of the features for the different dispersion software.}
@@ -15,7 +15,7 @@
 \\
 \toprule
 \vspace{25pt} \\
-   & \begin{rotate}{45}CPMGFit\end{rotate} & \begin{rotate}{45}cpmg\_fit\end{rotate} & \begin{rotate}{45}CATIA\end{rotate} & \begin{rotate}{45}NESSY\end{rotate} & \begin{rotate}{45}GUARDD\end{rotate} & \begin{rotate}{45}ShereKhan\end{rotate} & \begin{rotate}{45}GLOVE\end{rotate} & \begin{rotate}{45}relax\end{rotate} \hspace{5pt} \\
+   & \begin{rotate}{45}CPMGFit\end{rotate} & \begin{rotate}{45}cpmg\_fit\end{rotate} & \begin{rotate}{45}CATIA\end{rotate} & \begin{rotate}{45}NESSY\end{rotate} & \begin{rotate}{45}GUARDD\end{rotate} & \begin{rotate}{45}ShereKhan\end{rotate} & \begin{rotate}{45}GLOVE\end{rotate} & \begin{rotate}{45}chemex\end{rotate} & \begin{rotate}{45}relax\end{rotate} \hspace{5pt} \\
 %        & CPMGFit & CATIA & NESSY & GUARDD & ShereKhan & GLOVE & relax \\
 \midrule
 \endhead
@@ -27,7 +27,7 @@
 % Label.
 \label{table: dispersion software}
 
-%est row                    & \yes & \yes & \yes & \yes & \yes & \yes & \yes \\
+%est row                    & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes \\
 
 % The models.
 \vspace{-5pt} \\
@@ -36,53 +36,54 @@
 \vspace{-5pt} \\
 Base models \\
 \cmidrule(lr){1-1}
-$\Rtwoeff/\Ronerhoprime$    & \no  & \no  & \no  & \yes & \yes & \yes & \yes & \yes \\
-No Rex                      & \no  & \yes & \no  & \yes & \no  & \no  & \yes & \yes \\
+$\Rtwoeff/\Ronerhoprime$    & \no  & \no  & \no  & \yes & \yes & \yes & \yes & \no  & \yes \\
+No Rex                      & \no  & \yes & \no  & \yes & \no  & \no  & \yes & \no  & \yes \\
 
 \vspace{-5pt} \\
 Single quantum (SQ) CPMG-type \\
 \cmidrule(lr){1-1}
-LM63                        & \yes & \no  & \no  & \yes & \no  & \yes & \yes & \yes \\
-LM63 3-site                 & \yes & \no  & \no  & \yes & \no  & \no  & \no  & \yes \\
-CR72                        & \yes & \yes & \no  & \yes & \no  & \yes & \yes & \yes \\
-IT99                        & \yes & \no  & \no  & \no  & \no  & \no  & \yes & \yes \\
-TSMFK01                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-NS 2-site                   & \no  & \yes & \yes & \no  & \no  & \yes & \no  & \yes \\
+LM63                        & \yes & \no  & \no  & \yes & \no  & \yes & \yes & \no  & \yes \\
+LM63 3-site                 & \yes & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \yes \\
+CR72                        & \yes & \yes & \no  & \yes & \no  & \yes & \yes & \no  & \yes \\
+IT99                        & \yes & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \yes \\
+TSMFK01                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+NS 2-site                   & \no  & \yes & \yes & \no  & \no  & \yes & \no  & \no  & \yes \\
 
 \vspace{-5pt} \\
 Multiple quantum (MQ) CPMG-type \\
 \cmidrule(lr){1-1}
-MQ CR72                     & \no  & \yes & \no  & \no  & \yes & \no  & \yes & \yes \\
+MQ CR72                     & \no  & \yes & \no  & \no  & \yes & \no  & \yes & \no  & \yes \\
 \vspace{-5pt} \\
 MMQ (SQ, ZQ, DQ, \& MQ) CPMG-type \\
 \cmidrule(lr){1-1}
-NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \yes \\
-NS 3-site (linear)          & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
-NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
+NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+NS 3-site (linear)          & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 
 \vspace{-5pt} \\
 $\Ronerho$-type \\
 \cmidrule(lr){1-1}
-M61                         & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-DPL94                       & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-TP02                        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \yes \\
-NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \yes \\
-NS 3-site (linear)          & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
-NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
+M61                         & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+DPL94                       & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+TP02                        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+NS 3-site (linear)          & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 
 \midrule
 \vspace{-5pt} \\
 \textbf{General features} \\
 \cmidrule(lr){1-1}
-Graphical user interface (GUI)                  & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \yes \\
-Web user interface (Web UI)                     & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  \\
-Scripting user interface (Script UI)            & \no  & \no  & \yes & \no  & \no  & \yes & \yes & \yes \\
-Parallelisation via MPI for running on clusters & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-Off-resonance effects (CPMG-type data)          & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  \\
-Off-resonance effects ($\Ronerho$-type data)    & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \yes \\
-Van't Hoff analysis                             & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  \\
-ZZ exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
-HD exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+Graphical user interface (GUI)                  & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \no  & \yes \\
+Web user interface (Web UI)                     & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  \\
+Scripting user interface (Script UI)            & \no  & \no  & \yes & \no  & \no  & \yes & \yes & \no  & \yes \\
+Parallelisation via MPI for running on clusters & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+Off-resonance effects (CPMG-type data)          & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
+Off-resonance effects ($\Ronerho$-type data)    & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+Support for CEST-type data                      & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  \\
+Van't Hoff analysis                             & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  \\
+ZZ exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+HD exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 \end{longtable}
 \end{small}
 \end{center}
