Updated the GLOVE details in the dispersion software comparison table in the manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -47,18 +47,18 @@ LM63 3-site                 & \yes & \no  & \no  & \yes & \no  & \no  & \no  & \
 CR72                        & \yes & \yes & \no  & \yes & \no  & \yes & \yes & \no  & \yes \\
 IT99                        & \yes & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \yes \\
 TSMFK01                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-NS 2-site                   & \no  & \yes & \yes & \no  & \no  & \yes & \no  & \no  & \yes \\
+NS 2-site                   & \no  & \yes & \yes & \no  & \no  & \yes & ?    & \no  & \yes \\
 
 \vspace{-5pt} \\
 Multiple quantum (MQ) CPMG-type \\
 \cmidrule(lr){1-1}
-MQ CR72                     & \no  & \yes & \no  & \no  & \yes & \no  & \yes & \no  & \yes \\
+MQ CR72                     & \no  & \yes & \no  & \no  & \yes & \no  & ?    & \no  & \yes \\
 \vspace{-5pt} \\
 MMQ (SQ, ZQ, DQ, \& MQ) CPMG-type \\
 \cmidrule(lr){1-1}
-NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-NS 3-site (linear)          & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
-NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \yes \\
+NS 3-site (linear)          & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \no  \\
+NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \no  \\
 
 \vspace{-5pt} \\
 $\Ronerho$-type \\
@@ -66,7 +66,7 @@ $\Ronerho$-type \\
 M61                         & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 DPL94                       & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 TP02                        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \yes \\
 NS 3-site (linear)          & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 
