--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1289,7 +1289,6 @@ It is currently handled by assuming each state is a separate spin system but thi
 \item The van't Hoff analysis of multi-temperature dispersion data (see \url{https://en.wikipedia.org/wiki/Van\_\%27t\_Hoff\_equation}).
 \item ZZ exchange.
 \item HD exchange.
-\item Support for ZQ (zero quantum) and DQ (double quantum) CPMG and $\Ronerho$ dispersion data.
 \end{itemize}
 
 If you would like one of these features, please contact the ``relax-devel at gna.org''\index{mailing list!relax-devel} mailing list.
@@ -1300,11 +1299,9 @@ Synthetic data, or experimental data, can be obtained from the literature.
 
 Some of the missing models include:
 \begin{description}
-\item[`NS CPMG 3-site':]\index{relaxation dispersion!NS CPMG 3-site model}  The model of the numeric solution for 3-site exchange for CPMG-type data.
 \item[`NS $\Ronerho$ 3-site':]\index{relaxation dispersion!NS R1rho 3-site model}  The model of the numeric solution for 3-site exchange for $\Ronerho$-type data.
-\item[`MQ NS $\Ronerho$ 2-site':]\index{relaxation dispersion!MQ NS R1rho 2-site model}  The model of the numeric solution for 2-site exchange for multiple quantum $\Ronerho$-type data.
-\item[`MMQ 3-site':]\index{relaxation dispersion!MMQ 3-site model}  The model of the numeric solution for 3-site exchange for multiple quantum CPMG-type data.
-\item[`MQ NS $\Ronerho$ 3-site':]\index{relaxation dispersion!MQ NS R1rho 3-site model}  The model of the numeric solution for 3-site exchange for multiple quantum $\Ronerho$-type data.
+\item[`MMQ 3-site':]\index{relaxation dispersion!MMQ 3-site model}  The model of the numeric solution for 3-site exchange for multiple quantum CPMG-type data.  This is the linear 3-site exchange model.
+\item[`MMQ 3-site branched':]\index{relaxation dispersion!MMQ 3-site branched model}  Similar to the `MMQ 3-site' but with one of the $\kex$ parameters not set to zero.
 \end{description}
 
 Information for how these can be added is given in the next section.
