Readded the accidentally deleted \clearpage command to keep the dispersion software table nicely formatted.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1343,4 +1343,5 @@ Note that this table is likely to be incomplete.
 Please see the websites of the respective software for an up to date list of features.
 If you do find deficiencies in this table, it would be appreciated if you could communicate these on the relax users mailing list at ``relax-users at gna.org''\index{mailing list!relax-users}.
 
+\clearpage
 \input{dispersion_software}
