Added constrained optimisation and Monte Carlo simulations to the dispersion software comparison table.
This is for the user manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -84,6 +84,8 @@ Support for CEST-type data                      & \no  & \no  & \no  & \no  & \n
 Van't Hoff analysis                             & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  \\
 ZZ exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 HD exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+Constrained optimisation                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+Monte Carlo simulations for error analysis      & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \no  & \yes \\
 \end{longtable}
 \end{small}
 \end{center}
