Added a section on open source licencing to the dispersion software comparison table.
This is for the dispersion chapter of the user manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -86,6 +86,15 @@ ZZ exchange                                     & \no  & \no  & \no  & \no  & \n
 HD exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 Constrained optimisation                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 Monte Carlo simulations for error analysis      & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \no  & \yes \\
+
+\midrule
+\vspace{-5pt} \\
+\textbf{Open source licencing} \\
+\cmidrule(lr){1-1}
+GNU General Public Licence (version 2+)     & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+GNU General Public Licence (version 3+)     & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \yes & \yes \\
+Open source infrastructure                  & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \yes & \yes \\
+
 \end{longtable}
 \end{small}
 \end{center}
