--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -37,14 +37,14 @@
 Base models \\
 \cmidrule(lr){1-1}
 $\Rtwoeff/\Ronerhoprime$    & \no  & \no  & \no  & \yes & \yes & \yes & \yes & \no  & \yes \\
-No Rex                      & \no  & \yes & \no  & \yes & \no  & \no  & \yes & \no  & \yes \\
+No Rex                      & \no  & \yes & \no  & \yes & \yes & \no  & \yes & \no  & \yes \\
 
 \vspace{-5pt} \\
 Single quantum (SQ) CPMG-type \\
 \cmidrule(lr){1-1}
 LM63                        & \yes & \no  & \no  & \yes & \no  & \yes & \yes & \no  & \yes \\
 LM63 3-site                 & \yes & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \yes \\
-CR72                        & \yes & \yes & \no  & \yes & \no  & \yes & \yes & \no  & \yes \\
+CR72                        & \yes & \yes & \no  & \yes & \yes & \yes & \yes & \no  & \yes \\
 IT99                        & \yes & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \yes \\
 TSMFK01                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 NS 2-site                   & \no  & \yes & \yes & \no  & \no  & \yes & ?    & \no  & \yes \\
