Added a section about programming language to the dispersion software comparison table of the manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -95,6 +95,16 @@ GNU General Public Licence (version 2+)     & \yes & \no  & \no  & \no  & \no  &
 GNU General Public Licence (version 3+)     & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \yes & \yes \\
 Open source infrastructure                  & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \yes & \yes \\
 
+\midrule
+\vspace{-5pt} \\
+\textbf{Programming language} \\
+\cmidrule(lr){1-1}
+FORTRAN                     & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+C                           & \no  & \yes & \yes & \no  & \no  & \yes & \yes & \no  & \no  \\
+Python                      & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \yes & \yes \\
+Matlab                      & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  \\
+Perl                        & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  \\
+
 \end{longtable}
 \end{small}
 \end{center}
