Added a page break for better formatting of the dispersion software comparison table of the manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -87,6 +87,8 @@ HD exchange                                     & \no  & \no  & \no  & \no  & \n
 Constrained optimisation                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 Monte Carlo simulations for error analysis      & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \no  & \yes \\
 
+\pagebreak
+
 \midrule
 \vspace{-5pt} \\
 \textbf{Open source licencing} \\
