Editing and expansion of the dispersion software comparison table in the manual.
The optimisation algorithms are now listed, where known.  A number of entries and sections have also
been rearranged.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -84,10 +84,27 @@ Support for CEST-type data                      & \no  & \no  & \no  & \no  & \n
 Van't Hoff analysis                             & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  \\
 ZZ exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 HD exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
-Constrained optimisation                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-Monte Carlo simulations for error analysis      & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \no  & \yes \\
 
 \pagebreak
+
+\vspace{-5pt} \\
+\textbf{Optimisation algorithms} \\
+\cmidrule(lr){1-1}
+Grid search                                     & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \no  & \yes \\
+Nelder-Mead simplex                             & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+Levenberg-Maquardt                              & \yes & \yes & ?    & \yes & \no  & \yes & \yes & \yes & \no  \\
+Numeric gradient approximation required         & \yes & \yes & ?    & \yes & \no  & \yes & \yes & \yes & \no  \\
+Logarithmic-barrier constraint algorithm        & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \yes \\
+Monte Carlo simulations for error analysis      & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \no  & \yes \\
+
+\vspace{-5pt} \\
+\textbf{Programming languages} \\
+\cmidrule(lr){1-1}
+Python                      & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \yes & \yes \\
+C                           & \no  & \yes & \yes & \no  & \no  & \yes & \yes & \no  & \no  \\
+Perl                        & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  \\
+Matlab                      & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  \\
+FORTRAN                     & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 
 \vspace{-5pt} \\
 \textbf{Open source licencing} \\
@@ -95,16 +112,7 @@ Monte Carlo simulations for error analysis      & \yes & \no  & \no  & \yes & \y
 GNU General Public Licence (version 2+)     & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 GNU General Public Licence (version 3+)     & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \yes & \yes \\
 Open source infrastructure                  & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \yes & \yes \\
-
-\midrule
-\vspace{-5pt} \\
-\textbf{Programming language} \\
-\cmidrule(lr){1-1}
-FORTRAN                     & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
-C                           & \no  & \yes & \yes & \no  & \no  & \yes & \yes & \no  & \no  \\
-Python                      & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \yes & \yes \\
-Matlab                      & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  \\
-Perl                        & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  \\
+Proprietary                                 & \no  & \yes & \yes & \no  & \no  & \yes & \yes & \no  & \no  \\
 
 \end{longtable}
 \end{small}
