More updates for the dispersion software comparison in the manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -90,10 +90,11 @@ HD exchange                                     & \no  & \no  & \no  & \no  & \n
 \vspace{-5pt} \\
 \textbf{Optimisation algorithms} \\
 \cmidrule(lr){1-1}
-Grid search                                     & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \no  & \yes \\
+Grid search                                     & \yes & \no  & \no  & \yes & \yes & \no  & \no  & \no  & \yes \\
+Grid search (via scripting)                     & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
 Nelder-Mead simplex                             & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-Levenberg-Maquardt                              & \yes & \yes & ?    & \yes & \no  & \yes & \yes & \yes & \no  \\
-Numeric gradient approximation required         & \yes & \yes & ?    & \yes & \no  & \yes & \yes & \yes & \no  \\
+Levenberg-Maquardt                              & \yes & \yes & \yes & \yes & \no  & \yes & \yes & \yes & \no  \\
+Numeric gradient approximation                  & \yes & \yes & \yes & \yes & \no  & \yes & \yes & \yes & \no  \\
 Logarithmic-barrier constraint algorithm        & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \yes \\
 Monte Carlo simulations for error analysis      & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \no  & \yes \\
 
@@ -101,7 +102,7 @@ Monte Carlo simulations for error analysis      & \yes & \no  & \no  & \yes & \y
 \textbf{Programming languages} \\
 \cmidrule(lr){1-1}
 Python                      & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \yes & \yes \\
-C                           & \no  & \yes & \yes & \no  & \no  & \yes & \yes & \no  & \no  \\
+C                           & \no  & \yes & \yes & \no  & \no  & \yes & \yes & \no  & \yes \\
 Perl                        & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  \\
 Matlab                      & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  \\
 FORTRAN                     & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
