--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1339,9 +1339,9 @@ The following is a list of the officially released software which you can use in
 There is currently support in relax for generating the input files for CPMGFit, CATIA, NESSY, and ShereKhan and for running CPMGFit and CATIA from within relax.
 
 The features of the different software are compared in Table~\ref{table: dispersion software} on page~\pageref{table: dispersion software}.
-Note that this table is likely to be incomplete.
-Please see the websites of the respective software for an up to date list of features.
-If you do find deficiencies in this table, it would be appreciated if you could communicate these on the relax users mailing list at ``relax-users at gna.org''\index{mailing list!relax-users}.
+Note that this table is likely to be incomplete so please see the websites of the respective software for an up to date list of features.
+The aim of this table is to provide a fair comparison between all of the available dispersion software.
+Therefore if you do find deficiencies or errors in this table please report these either to the relax users mailing list at ``relax-users at gna.org''\index{mailing list!relax-users}, submit a bug report\index{bug!report} (see section~\ref{reporting bugs} on page~\pageref{reporting bugs}), or send a private message to one of the relax developers (\url{http://gna.org/project/memberlist.php?group=relax}) so that the details can be corrected.
 
 \clearpage
 \input{dispersion_software}
